post: create <npm/git/corepack/nvm 被墙可以通过设置 mirror 或 proxy 解决>

--- a/src/posts/2024-08-07_注册、登录 npm 账号.md
+++ b/src/posts/2024-08-07_注册、登录 npm 账号.md
@@ -2,9 +2,9 @@
 id: 79824f54-fac8-4c8a-9904-bfc2c3433ee9
 title: 注册、登录 npm 账号
 createTime: 2024-08-07
-updateTime: 2024-08-15
+updateTime: 2024-09-02
 categories: npm commands
-tags: npm login, vpn
+tags: npm login
 series: npm 学习
 description: 在官网注册账号。npm login 前一定要确认 registry。登录时报错可能是 registry 写成了 http，应该改为 https。当 registry 设置正确但登录仍然报错，可能是网站被墙了，可以给 npm 设置 proxy 解决。npm whoami。npm logout
 ---
@@ -68,31 +68,11 @@ npm error network This is a problem related to network connectivity.
 npm error network In most cases you are behind a proxy or have bad network settings.
 ```
 
-很有可能是网站被墙了，在 China 访问外网都或多或少有这个问题。npm 网站被墙的状况还凑合，有时候等一会儿再尝试几次就好了。如果不想等也可以给 npm 设置 proxy。
+很有可能是网站被墙了，参考 [《npm/git/corepack/nvm 被墙可以通过设置 mirror 或 proxy 解决》](post:bb085790-9987-4479-9188-6bdbff059cd4#npm_registry) 给 npm 设置 proxy
 
-设置 proxy
+在登录、发布包的操作完成之后一定要把 proxy 取消掉！`npm i` 等操作也会经过 proxy，会在不知不觉间用光你的 vpn 流量！
 
-```bash
-npm config set proxy=http://127.0.0.1:7890
-```
-
-查看 proxy
-
-```bash
-npm config get proxy
-```
-
-删除 proxy
-
-```bash
-npm config delete proxy
-```
-
-看这篇文章：[给 git 设置 proxy](post:c4676c26-beb7-4b95-8239-5d1c14b4ebbe)，大同小异。
-
-注意：<span style="color:darkorange;">在登录、发布包完成之后一定要把 proxy 取消掉！</span>`npm i` 等操作也都会走 proxy，会在不知不觉间用光你的 vpn 流量！
-
-使用 `npm i` 时被墙还是通过换 registry （国内镜像）解决，别用 proxy。像登录、发布这种不能随便换 registry 的情况再用 proxy —— 然后用完必须取消掉！
+使用 `npm i` 时被墙还是通过设置 mirror 解决，别用 proxy。像登录、发布这种不能随便换 registry 的情况再用 proxy —— 然后用完必须取消掉！
 
 ## 其他
 
