post: update <使用 npx 执行 bin>

--- a/src/posts/2024-08-14_使用 npx 执行 bin.md
+++ b/src/posts/2024-08-14_使用 npx 执行 bin.md
@@ -2,7 +2,7 @@
 id: 7a48f9e5-4e42-489d-bd27-87d9e171da4d
 title: 使用 npx 执行 bin
 createTime: 2024-08-14
-updateTime: 2024-08-22
+updateTime: 2024-09-05
 categories: npm commands
 tags: npx
 series: npm 学习
@@ -108,3 +108,9 @@ v6.14.4 出问题了，但和 bug1 和 bug2 还不一样。
 搞不懂为什么降低 npm 版本也无法复现。先这样，以后如果有新思路再研究吧。
 
 知道 npx 的某些版本有这种 bug 就好，以后如果再遇到也心里有底（大不了就卸载重装 nodejs）。
+
+## npm mirror 不一定是最新版本
+
+npm registry 的镜像网站并不能保持和原网站同步。
+
+当我发布了 create-lily-cli 的新版本后，taobao 镜像源中并没有更新版本。所以使用这个镜像执行 npx 的时候安装的还是旧版本。具体见 [《npm/git/corepack/nvm 被墙可以通过设置 mirror 或 proxy 解决》](post:bb085790-9987-4479-9188-6bdbff059cd4)
