chore: reorganize post tags and series

--- a/src/posts/2020-02-12_vue2 踩坑总结.md
+++ b/src/posts/2020-02-12_vue2 踩坑总结.md
@@ -4,7 +4,7 @@ title: vue2 踩坑总结
 createTime: 2020-02-12
 updateTime:
 categories: vue
-tags:
+tags: vue2
 description: vue@2.6 踩坑总结：v-if 的"适当"陷阱。内部监听生命周期函数。自制 v-model。$nextTick。watch。记得移除定时器和监听事件。provide 和 inject 不支持响应式
 ---
 
