--- a/src/posts/2021-06-18_vue2 源码学习（一）Vue 的初始化.md
+++ b/src/posts/2021-06-18_vue2 源码学习（一）Vue 的初始化.md
@@ -1,10 +1,11 @@
 ---
 id: 0d3cba0d-a85d-4dc8-b70d-26a1e04083f3
-title: vue2 源码思路理解（一）Vue 的初始化
+title: vue2 源码学习（一）Vue 的初始化
 createTime: 2021-06-18
 updateTime:
 categories: vue
-tags:
+tags: vue2
+series: vue2 源码学习
 description:
 ---
 
