--- a/src/posts/2021-06-19_vue2 源码学习（二）数据响应系统.md
+++ b/src/posts/2021-06-19_vue2 源码学习（二）数据响应系统.md
@@ -1,10 +1,11 @@
 ---
 id: 735bbfc9-44b8-41cd-9d42-cc27572b8209
-title: vue2 源码思路理解（二）数据响应系统
+title: vue2 源码学习（二）数据响应系统
 createTime: 2021-06-19
 updateTime:
 categories: vue
-tags:
+tags: vue2
+series: vue2 源码学习
 description:
 ---
 
