--- a/src/posts/2021-06-21_vue2 源码学习（四）其他重要选项的初始化及实现.md
+++ b/src/posts/2021-06-21_vue2 源码学习（四）其他重要选项的初始化及实现.md
@@ -1,10 +1,11 @@
 ---
 id: 0d773467-2c7a-47ec-b553-b50d54d06734
-title: vue2 源码思路理解（四）其他重要选项的初始化及实现
+title: vue2 源码学习（四）其他重要选项的初始化及实现
 createTime: 2021-06-21
 updateTime:
 categories: vue
-tags:
+tags: vue2
+series: vue2 源码学习
 description:
 ---
 
