--- a/src/posts/2022-07-08_已有项目将 vue2.6 升级为 2.7.md
+++ b/src/posts/2022-07-08_已有项目将 vue2.6 升级为 2.7.md
@@ -4,7 +4,7 @@ title: 已有项目将 vue2.6 升级为 2.7
 createTime: 2022-07-08
 updateTime:
 categories: vue
-tags:
+tags: vue2
 description: 将项目从 vue 2.6 升级为 2.7 的步骤和注意事项
 ---
 
