--- a/src/posts/2023-03-30_vue3 笔记.md
+++ b/src/posts/2023-03-30_vue3 笔记.md
@@ -4,7 +4,7 @@ title: vue3 笔记
 createTime: 2023-03-30
 updateTime:
 categories: vue
-tags:
+tags: vue3
 description: vue3笔记：watchEffect 的起源。getCurrentInstance。props
 ---
 
