--- a/src/posts/2024-07-22_个人博客网站开发记录：将 csdn 文章下载到本地.md
+++ b/src/posts/2024-07-22_个人博客网站开发记录：将 csdn 文章下载到本地.md
@@ -1,6 +1,6 @@
 ---
 id: 8fdbb844-41f8-487e-816d-3cee2b948c54
-title: 个人博客网站开发记录 - 将 csdn 文章下载到本地
+title: 个人博客网站开发记录：将 csdn 文章下载到本地
 createTime: 2024-07-22
 updateTime:
 categories: nodejs
