--- a/src/posts/2024-08-02_个人博客网站开发记录：super dev.md
+++ b/src/posts/2024-08-02_个人博客网站开发记录：super dev.md
@@ -1,6 +1,6 @@
 ---
 id: f0dafd07-89c7-4217-b8cf-8bc594646944
-title: 个人博客网站开发记录 - super dev
+title: 个人博客网站开发记录：super dev
 createTime: 2024-08-02
 updateTime:
 categories: nodejs
