--- a/src/posts/2021-06-20_vue2 源码学习（三）渲染函数的观察者.md
+++ b/src/posts/2021-06-20_vue2 源码学习（三）渲染函数的观察者.md
@@ -1,10 +1,11 @@
 ---
 id: 3e93ed72-b6cd-45ca-8f0d-53b2f9c1b761
-title: vue2 源码思路理解（三）渲染函数的观察者
+title: vue2 源码学习（三）渲染函数的观察者
 createTime: 2021-06-20
 updateTime:
 categories: vue
-tags:
+tags: vue2
+series: vue2 源码学习
 description:
 ---
 
