--- a/src/posts/2021-06-18_vue2 源码学习（一）Vue 的初始化.md
+++ b/src/posts/2021-06-18_vue2 源码学习（一）Vue 的初始化.md
@@ -54,7 +54,7 @@ vm.$options = mergeOptions(resolveConstructorOptions(vm.constructor), options ||
 ```
 
 ```js
-function mergeOptions() {
+function mergeOptions(parent, child, vm) {
   // ...对选项进行规范化处理
   var options = {};
   var key;
@@ -74,16 +74,16 @@ function mergeOptions() {
 }
 ```
 
-### 在策略函数中通过判断 vm 是否存在，可以知道是创建实例，还是创建子类
+### 在策略函数 strat 中通过判断 vm 是否存在，可以知道是创建实例 or 创建子类
 
-使用 new 操作符创建实例：（可能是 `new Vue()`，也可能是 `new Sub()`）
+使用 new 操作符创建实例时（可能是 `new Vue()`，也可能是 `new Sub()`），调用 `mergeOptions` 时传递 vm
 
 ```js
 // _init 方法中调用 mergeOptions 函数，传递了 vm
 vm.$options = mergeOptions(resolveConstructorOptions(vm.constructor), options || {}, vm);
 ```
 
-使用 Vue.extend() 来创建子类：
+使用 Vue.extend() 创建子类时，调用 `mergeOptions` 时不传 vm
 
 ```js
 // Vue.extend 方法中调用 mergeOptions 函数，不传 vm
@@ -160,7 +160,7 @@ const hasHandler = {
 ```
 
 - 在模版中可以用 parseInt，因为在 allowedGlobals 中
-- 假如在 data 中定义了属性 *test，那么在模版中不能通过 \_test 访问（因为是以*开头的），只能通过 $data.\_test 访问
+- 假如在 data 中定义了属性 `_test`，在模版中不能通过 `_test` 访问（因为是以`_`开头的），只能通过 `$data._test` 访问
 
 ## initLifecycle
 
