--- a/src/posts/2021-06-19_vue2 源码学习（二）数据响应系统.md
+++ b/src/posts/2021-06-19_vue2 源码学习（二）数据响应系统.md
@@ -290,19 +290,19 @@ const data = {
 #### getter ： 返回值 + 收集依赖
 
 ```js
-	get: function reactiveGetter () {
-	   var value = getter ? getter.call(obj) : val;
-	     if (Dep.target) {
-	       dep.depend();
-	       if (childOb) {
-	         childOb.dep.depend();
-	         if (Array.isArray(value)) {
-	           dependArray(value);
-	         }
-	       }
-	     }
-	     return value
-	   },
+get: function reactiveGetter() {
+  var value = getter ? getter.call(obj) : val;
+  if (Dep.target) {
+    dep.depend();
+    if (childOb) {
+      childOb.dep.depend();
+      if (Array.isArray(value)) {
+        dependArray(value);
+      }
+    }
+  }
+  return value;
+}
 ```
 
 ###### `childOb.dep.depend()` 的作用是什么
@@ -320,35 +320,38 @@ data: {
 如果读取了 data.a 的值，那么依赖会被收集到两个 dep 中：
 
 1. `data.a` 的 getter/setter 通过闭包引用的 `dep`
-   触发时机：修改 data.a 时会进入 setter ，从而触发
+
+触发时机：修改 data.a 时会进入 setter ，从而触发
+
 2. `data.a.childOb.dep` 即 `data.a.__ob__.dep`
-   触发时机：使用 Vue.set() 和 Vue.delete() 添加、删除属性时，触发依赖
 
-   ```js
-   Vue.set = function (obj, key, val) {
-     defineReactive(obj, key, val);
-     obj.__ob__.dep.notify();
-   };
-   ```
+触发时机：使用 Vue.set() 和 Vue.delete() 添加、删除属性时，触发依赖
 
-   所以当我们给 data.a 添加属性时
+```js
+Vue.set = function (obj, key, val) {
+  defineReactive(obj, key, val);
+  obj.__ob__.dep.notify();
+};
+```
 
-   ```js
-   Vue.set(data.a, "c", 1);
-   ```
+所以当我们给 data.a 添加属性时
 
-   之所以能够触发依赖，就是因为 Vue.set 函数中触发了收集在 `data.a.__ob__.dep` 这个”筐“中的依赖：
+```js
+Vue.set(data.a, "c", 1);
+```
 
-   ```js
-   Vue.set = function (obj, key, val) {
-     defineReactive(obj, key, val);
-     obj.__ob__.dep.notify(); // 相当于 data.a.__ob__.dep.notify()
-   };
+之所以能够触发依赖，就是因为 Vue.set 函数中触发了收集在 `data.a.__ob__.dep` 这个”筐“中的依赖：
 
-   Vue.set(data.a, "c", 1);
-   ```
+```js
+Vue.set = function (obj, key, val) {
+  defineReactive(obj, key, val);
+  obj.__ob__.dep.notify(); // 相当于 data.a.__ob__.dep.notify()
+};
 
-   所以 `__ob__` 属性以及` __ob__.dep` 的主要作用是为了添加、删除属性时有能力触发依赖，而这就是 Vue.set 或 Vue.delete 的原理。
+Vue.set(data.a, "c", 1);
+```
+
+所以 `__ob__` 属性以及` __ob__.dep` 的主要作用是为了添加、删除属性时有能力触发依赖，而这就是 Vue.set 或 Vue.delete 的原理。
 
 ###### `dependArray()` 的作用是什么
 
