--- a/src/posts/2024-07-19_个人博客网站开发记录.md
+++ b/src/posts/2024-07-19_个人博客网站开发记录.md
@@ -2,7 +2,7 @@
 id: fa43201f-1e9e-411d-abc6-2d9e1411c13c
 title: 个人博客网站开发记录
 createTime: 2024-07-19
-updateTime: 2024-08-29
+updateTime: 2024-09-10
 categories: nodejs
 tags: github pages, github workflow
 series: 个人博客网站开发记录
@@ -275,3 +275,5 @@ console.log(args);
 设置了 `position: sticky` 的元素，当滚动到 sticky 效果生效时，元素的颜色会变。如果本身就是鲜艳的颜色，那么变化会很明显。网站中的文章标签原先是用的亮蓝色，变化很明显。一开始我还不确定变色的原因，很困扰，排查了好久才发现是 sticky 造成的。现在不得不改成暗蓝色了，改后还是会变色，但不仔细盯着看就不明显了。
 
 这是 css 的 bug 还是 feature 我不知道，在网上没有找到相关的讨论。
+
+2024.09.10 补充：见[《设置相同 color 的文字看起来颜色不同》](post:b7984881-28c1-4cf1-a2a5-c17168c7d2e1)
