post: rename tag -> vue2/vue3区别

--- a/src/posts/2024-09-18_vue2 和 vue3 的区别.md
+++ b/src/posts/2024-09-18_vue2 和 vue3 的区别.md
@@ -4,7 +4,7 @@ title: vue2 和 vue3 的区别
 createTime: 2024-09-18
 updateTime:
 categories: vue
-tags: vue2, vue3
+tags: vue2/vue3区别
 description: 研究 vue2 和 vue3 的区别。vue2 和 vue3 都可以使用 composition-api，但是原理不同，效果也有区别：比如 reactive(obj)===obj 在 vue2 中是 true，在 vue3 中是 false。
 ---
 
