post: update <vue2 和 vue3 的区别>

--- a/src/posts/2024-09-18_vue2 和 vue3 的区别.md
+++ b/src/posts/2024-09-18_vue2 和 vue3 的区别.md
@@ -56,11 +56,48 @@ const reactiveObj = reactive(obj);
 - vue2：使用 Object.defineProperty 递归地给 obj 的所有属性设置 getter 和 setter，然后返回 obj。
 - vue3：创建一个 Proxy 对象代理 obj，然后返回 Proxy 对象。
 
-所以下面的全等判断在 vue2 和 vue3 中结果不同。这个差异就造成了 [《prosemirror error - Applying a mismatched transaction》](post:ef915aca-7b73-4057-b42f-5c1bcfb81838) 的 bug：
+###### reactiveObj === obj？
 
-```js
-console.log(reactiveObj === obj); //vue2:true, vue3:false
+- vue2：`reactiveObj === obj`
+- vue3：`reactiveObj !== obj`
+
+文章[《prosemirror error - Applying a mismatched transaction》](post:ef915aca-7b73-4057-b42f-5c1bcfb81838) 中的 bug 就是由这个差异导致的。
+
+###### 直接修改原对象能触发依赖吗？
+
+- vue2：直接修改原对象可以触发依赖（触发视图更新、watch 等）
+- vue3：直接修改原对象无法触发依赖，即响应式失效（数据变化，但是相关依赖不会更新）
+
+```html
+<script setup>
+  import { reactive, watch } from "vue";
+
+  const obj = { name: "foo" };
+  const reactiveObj = reactive(obj);
+
+  function changeName() {
+    obj.name = "bar";
+  }
+
+  watch(reactiveObj, (val) => {
+    console.log("reactiveObj changed:", val.name);
+  });
+</script>
+
+<template>
+  <section>
+    <input type="button" value="修改name" @click="changeName" />
+    {{ obj.name }}
+  </section>
+</template>
 ```
+
+点击按钮：
+
+- vue2 中控制台输出 `reactiveObj changed: bar`，页面展示内容变为 bar。
+- vue3 中控制台无输出，页面展示内容无变化。
+
+文章 [《迁移代码时发现 Super Uploader 中文件状态不更新》](post:aea0792d-441d-4608-bffc-02ea956418d8) 中的 bug 就是由这个差异导致的。
 
 #### toRaw(reactiveObj)
 
@@ -389,6 +426,9 @@ import { reactive } from "vue";
 const arr = [1];
 const reactiveArr = reactive(arr); // vue2 报错；vue3正常
 ```
+
+- vue2：直接修改原对象可以触发依赖（触发视图更新、watch 等）
+- vue3：直接修改原对象无法触发依赖，即响应式失效（数据变化，但是相关依赖不会更新）
 
 ## eslint 规则不同
 
