post: recategorize and retag posts(add git CI/CD categories)

--- a/src/posts/2024-08-26_初始化项目步骤.md
+++ b/src/posts/2024-08-26_初始化项目步骤.md
@@ -3,8 +3,8 @@ id: dac4f67a-a623-47bd-bb79-90df2fb5d046
 title: 初始化项目步骤
 createTime: 2024-08-26
 updateTime:
-categories: eslint
-tags: git, github
+categories: git, eslint
+tags: github
 description: 初始化项目的步骤：package.json、eslint、git、上传到 github
 ---
 
