--- a/src/posts/2024-08-30_git tag.md
+++ b/src/posts/2024-08-30_git tag.md
@@ -3,8 +3,8 @@ id: 1be5be72-70d6-440a-9029-3b933183874d
 title: git tag
 createTime: 2024-08-30
 updateTime:
-categories:
-tags: git, git tag
+categories: git
+tags: git tag
 series:
 description:
 ---
