post: create <nodejs 模块缓存>

--- a/src/posts/2024-09-25_个人博客网站开发记录：功能更新及问题总结.md
+++ b/src/posts/2024-09-25_个人博客网站开发记录：功能更新及问题总结.md
@@ -143,7 +143,7 @@ showdown 的列表中无法包含 pre
 <pre>略</pre>
 ```
 
-### super-dev 无法检测出运行过程中 categories 文件变化造成的无效分类
+### super-dev 无法检测出运行过程中 categories 文件变化造成的无效分类 {unable_to_detect_invalid_categories_caused_by_changes_in_categories_files_during_runtime}
 
 【此问题不予解决】
 
@@ -184,3 +184,5 @@ async function run() {
 2. 检查无效分类时，不通过 `import` 获取 categories，而是通过 `fs.readFile` 等方法读取文件并自己解析内容。
 
 但我觉得这个问题的影响微乎其微，而且改后会影响 super-dev 的性能（super-dev 的性能决定写文章的体验，是极其重要的），所以我决定**不修复此问题**，知道有这个情况就可以了。
+
+更多关于 nodejs 模块缓存的内容见[《nodejs 模块缓存》](post:c6b4694d-007d-4312-b772-89d23f6dbdf6)
