--- a/src/posts/2024-08-02_个人博客网站开发记录：super dev.md
+++ b/src/posts/2024-08-02_个人博客网站开发记录：super dev.md
@@ -4,7 +4,7 @@ title: 个人博客网站开发记录：super dev
 createTime: 2024-08-02
 updateTime:
 categories: nodejs
-tags:
+tags: vite, hmr
 series: 个人博客网站开发记录
 description:
 ---
