--- a/src/posts/2024-10-30_babel 原理及用法.md
+++ b/src/posts/2024-10-30_babel 原理及用法.md
@@ -131,6 +131,8 @@ const name = "emily";
 var str = "debugger";
 ```
 
+（文章[《编写 vite 插件移除 vue SFC 中的 debugger》](post:26fd7f0c-3760-40d6-95e6-c7cf8db699b8)中就使用了这里的 removeDebugger）
+
 #### 例: 移除 console.log
 
 这个例子比移除 debugger 要复杂一些，因为 `console.log()` 在 babel ast 中没有"专属"类型，所以需要自己判断。
