--- a/src/posts/2024-11-05_npmrc.md
+++ b/src/posts/2024-11-05_npmrc.md
@@ -43,7 +43,7 @@ cache = ${HOME}/.npm-packages
 比如，给项目指定 registry 地址：在项目内执行命令：
 
 ```bash
-# location 可选 global/user/project，默认 user
+# set 时可以设置 location，可选 global/user/project，默认 user
 npm config set registry=[npm_registry_url] --location=project
 ```
 
