post: update <解决 vite 项目的 hmr 失效问题>

--- a/src/posts/2024-11-04_解决 vite 项目的 hmr 失效问题.md
+++ b/src/posts/2024-11-04_解决 vite 项目的 hmr 失效问题.md
@@ -1,16 +1,16 @@
 ---
 id: 4d414330-bd8d-40f4-9680-6261161eef79
-title: 解决 vite 项目的 hmr 问题（微小的改动也会导致 full-reload）
+title: 解决 vite 项目的 hmr 失效问题
 createTime: 2024-11-04
-updateTime:
+updateTime: 2025-03-25
 categories: build tools
-tags: vite, hmr
-description:
+tags: vite, hmr, circular imports
+description: 在 Vite 项目中，开发时频繁的页面全量刷新（full-reload）问题源于代码中的循环依赖（circular imports），导致 HMR（热模块替换）失效。通过调试工具和源码分析，定位并修复了循环依赖，恢复了 HMR 的正常工作。
 ---
 
 ## 问题描述
 
-工作项目使用 vite，dev 时 hmr 出问题了：修改文件内容总是导致页面 reload，即使是很微小的变化也 reload。我们的项目 load 很费时间，所以开发体验极糟。
+工作项目使用 vite，dev 时 hmr 出问题了：修改文件内容总是导致页面 full-reload，即使是很微小的变化也 full-reload。我们的项目 load 很费时间，所以开发体验极糟。
 
 发现这个问题时我就想解决。我研究了一会儿，发现浏览器（dev client）接受到 node 服务器（dev server）发来的 websocket 信息 `full-reload`，但是这之后该怎么排查我就没头绪了。所以当时我放弃，妥协了，开发时都是盲写。
 
@@ -92,3 +92,14 @@ vite:hmr circular imports detected: xxx.js ->....-> xxx.js
 接下来就到了熟悉的步骤了：看调用栈+研究源码 —— 过程不细说了，最终发现有两种情况会导致 hmr full-reload：循环依赖 或者 dead end。而我们项目是因为循环引用才 full-reload。
 
 我修改项目代码，打破循环引用后果然 hmr 就正常工作了！
+
+## 一些思考
+
+在复杂项目中，循环依赖其实是很常见的。理论上当然是可以设计出没有循环依赖的代码，但实际中变数太多，很难实现。
+
+vite 一遇到循环依赖，hmr 就会彻底失效，这其实是蛮严重的体验问题。尤其是 vite 的所有资源都是按需加载，每次 full-reload 耗时极长。这与使用 vite 的初衷完全背道而驰了。
+
+附上一些相关 issues 吧：
+
+- [How do you guys handle circular imports? ](https://github.com/vitejs/vite/discussions/16424)
+- [Circular imports in HMR](https://github.com/vitejs/vite/issues/16580)
